# fotmobpy

./: .gitignore  README.md  setup.cfg
fotmobpy/: __init__.py  leagues.py  matches.py
fotmobpy/assets/: leagues.csv
