[metadata]
name = fotmobpy
version = 0.0.1
description = Package to retrieve data from the Fotmob API
long_description = file: README.md
author = Naveen Venkatesan
author_email = naveen.venkatesan@gmail.com
url = https://github.com/venkatesannaveen/fotmobpy
license = MIT

[options]
zip_safe = False
packages = find:
install_requires = 
    requests
    pandas